Stylesheet/emote/tag updates 2012-10-26

--- a/emotes/mylittleandysonic1.yaml
+++ b/emotes/mylittleandysonic1.yaml
@@ -1,11 +1,11 @@
 /a_lot:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [0, -1851]
     Size: [256, 142]
 /absneer:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [-166, -787]
     Size: [90, 102]
 /abthis:
@@ -48,7 +48,7 @@
     Type: Custom
 /applepuff:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [-154, -939]
     Size: [99, 102]
 /artfun:
@@ -58,7 +58,7 @@
     Size: [212, 166]
 /bendover:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [0, -1091]
     Size: [152, 152]
 /big!:
@@ -72,7 +72,7 @@
     Type: Custom
 /bmwat:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [-156, -1666]
     Size: [83, 127]
 /bonfun:
@@ -87,7 +87,7 @@
     Size: [131, 200]
 /bonwut:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [0, -1699]
     Size: [89, 152]
 /braefun:
@@ -95,10 +95,6 @@
     Image: http://a.thumbs.redditmedia.com/YLUHfnn5zXXkkrEx.png
     Offset: [0, -2601]
     Size: [202, 152]
-/brd:
-  null:
-    Image: http://f.thumbs.redditmedia.com/W0xItPrYVx2yAjWw.png
-    Size: [120, 120]
 /bryvoodfun:
   null:
     Image: http://a.thumbs.redditmedia.com/oKR1l6L29UAOWRwB.png
@@ -106,17 +102,17 @@
     Size: [212, 166]
 /cadancewat:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [-146, -1243]
     Size: [85, 127]
 /cadencewat:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [-146, -1243]
     Size: [85, 127]
 /ch35:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -2466]
     Size: [113, 152]
 /chaosgun:
@@ -136,42 +132,42 @@
     Size: [216, 152]
 /cheerious:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -2162]
     Size: [147, 152]
 /cheerlikesit:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [-113, -2466]
     Size: [125, 127]
 /chnuzzle:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -2466]
     Size: [113, 152]
 /chryswat:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [-97, -1547]
     Size: [122, 127]
 /cmcderp:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [0, -1993]
     Size: [175, 127]
 /cmcexcited:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -2010]
     Size: [228, 152]
 /cordwithit:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -252]
     Size: [126, 252]
 /cowpony:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [0, -2022]
     Size: [147, 177]
 /crackle:
@@ -181,13 +177,13 @@
     Size: [198, 150]
 /crazypie:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -2314]
     Size: [141, 152]
 /creamsicle:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
-    Offset: [0, -2784]
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
+    Offset: [0, -2775]
     Size: [127, 163]
 /darkfun:
   null:
@@ -220,17 +216,17 @@
     Size: [221, 152]
 /derpoops:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -2769]
     Size: [106, 117]
 /derpshrug:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [-99, -1395]
     Size: [115, 127]
 /derpsrs:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [0, -2228]
     Size: [105, 102]
 /derpysign:
@@ -249,17 +245,17 @@
     Type: Custom
 /disamused:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [-126, -252]
     Size: [118, 177]
 /disangry:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -908]
     Size: [195, 202]
 /disbored:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [0, -1395]
     Size: [99, 152]
 /discordquite:
@@ -269,36 +265,36 @@
     Size: [126, 150]
 /discordwtf:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [0, -939]
     Size: [154, 152]
 /disexcited:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -1489]
     Size: [173, 177]
 /disgusta:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [0, -1243]
     Size: [146, 152]
 /diskate:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Size: [194, 252]
 /diswut:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [0, -960]
     Size: [174, 202]
 /dod:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [-141, -2478]
     Size: [110, 127]
 /doitfilly:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [0, -231]
     Size: [185, 202]
 /dolcefun:
@@ -308,17 +304,17 @@
     Size: [208, 152]
 /dresscord:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [0, -1466]
     Size: [158, 252]
 /eagleeye:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [0, -1314]
     Size: [160, 152]
 /eeveedash:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [-175, -1993]
     Size: [79, 102]
 /esplinfun:
@@ -462,13 +458,13 @@
     Size: [204, 152]
 /flutalot:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [0, -1851]
     Size: [256, 142]
 /flutterpout:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
-    Offset: [0, -2657]
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
+    Offset: [0, -2648]
     Size: [130, 127]
 /fluttershy!:
   null:
@@ -492,27 +488,27 @@
     Type: Custom
 /foryou:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -706]
     Size: [204, 202]
 /frightenpie:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [-130, -2757]
     Size: [113, 152]
 /genius:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [-106, -2769]
     Size: [97, 102]
 /gildafriendship:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -1110]
     Size: [180, 202]
 /gildafury:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -1843]
     Size: [256, 167]
 /green!:
@@ -525,21 +521,21 @@
     Type: Custom
 /hatefuck:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Size: [256, 231]
 /hawkeye:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [0, -1314]
     Size: [160, 152]
 /herhorn:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -1110]
     Size: [180, 202]
 /hipstertrixie:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -1666]
     Size: [156, 177]
 /hoppy:
@@ -548,16 +544,16 @@
     Size: [105, 157]
 /inurbutt:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [0, -1718]
     Size: [157, 177]
 /ishygdadt:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Size: [251, 202]
 /iwapprove:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -1312]
     Size: [232, 177]
 /luna!:
@@ -567,7 +563,7 @@
     Type: Custom
 /lunadark:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [0, -606]
     Size: [183, 202]
 /lyrafun:
@@ -591,17 +587,17 @@
     Type: Custom
 /macgasp:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
-    Offset: [-147, -2174]
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
+    Offset: [-147, -2173]
     Size: [101, 152]
 /noidea:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [-147, -2162]
     Size: [105, 152]
 /notenoughbooks:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -2618]
     Size: [184, 151]
 /orange!:
@@ -615,7 +611,7 @@
     Size: [211, 154]
 /pbf:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [-185, -231]
     Size: [66, 82]
 /pink!:
@@ -638,7 +634,7 @@
     Size: [212, 166]
 /ppchainsaw:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [0, -635]
     Size: [226, 152]
 /ppfacehoof:
@@ -648,7 +644,7 @@
     Size: [93, 100]
 /ppfof:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [0, -808]
     Size: [176, 152]
 /ppfun:
@@ -672,7 +668,7 @@
     Type: Custom
 /ppsly:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [-140, -2605]
     Size: [111, 152]
 /ppsoawesome:
@@ -682,7 +678,7 @@
     Size: [115, 120]
 /ppteeth:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [0, -787]
     Size: [166, 152]
 /ppwhat:
@@ -692,7 +688,7 @@
     Size: [116, 109]
 /psychiatwi:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [0, -202]
     Size: [210, 202]
 /purple!:
@@ -701,7 +697,7 @@
     Type: Custom
 /queencheer:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [0, -1895]
     Size: [155, 127]
 /rainbow!:
@@ -714,12 +710,12 @@
     Size: [248, 152]
 /rarhorror:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [0, -1162]
     Size: [162, 152]
 /rarimad:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -504]
     Size: [207, 202]
 /rarisup:
@@ -738,12 +734,12 @@
     Size: [74, 70]
 /raritywooo:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [-146, -433]
     Size: [100, 152]
 /rarizee:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [-105, -2228]
     Size: [97, 102]
 /rcrfun:
@@ -757,7 +753,7 @@
     Type: Custom
 /rosefof:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [0, -2199]
     Size: [144, 152]
 /rosefun:
@@ -767,7 +763,7 @@
     Size: [201, 152]
 /rubysquee:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [-89, -1699]
     Size: [124, 127]
 /sackflip:
@@ -788,17 +784,17 @@
     Type: Custom
 /sbeyeroll:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [-185, -313]
     Size: [69, 77]
 /sbgrin:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [-91, -2330]
     Size: [74, 77]
 /sbshy:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [-162, -1162]
     Size: [85, 127]
 /scootasign:
@@ -827,12 +823,12 @@
     Size: [115, 115]
 /scootscared:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
-    Offset: [0, -2528]
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
+    Offset: [0, -2519]
     Size: [140, 129]
 /sexymac:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [0, -404]
     Size: [200, 202]
 /shitemote:
@@ -848,7 +844,7 @@
     Type: Custom
 /shyduck:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [0, -2330]
     Size: [91, 102]
 /shyfun:
@@ -858,12 +854,12 @@
     Size: [234, 167]
 /soarinshock:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [-141, -2351]
     Size: [110, 127]
 /sockcord:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [0, -1547]
     Size: [97, 152]
 /sp:
@@ -899,9 +895,9 @@
     Size: [226, 152]
 /twicake:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
-    Offset: [0, -2947]
-    Size: [126, 127]
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
+    Offset: [-127, -2909]
+    Size: [124, 125]
 /twifun:
   null:
     Image: http://a.thumbs.redditmedia.com/YLUHfnn5zXXkkrEx.png
@@ -909,28 +905,28 @@
     Size: [230, 152]
 /twiglare:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
-    Offset: [-127, -2909]
-    Size: [124, 102]
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
+    Offset: [0, -2938]
+    Size: [124, 101]
 /twilight!:
   null:
     CSS: {background-color: '#caaad1!important', color: '#363b74!important', cursor: text!important}
     Type: Custom
 /twinuzzle:
   null:
-    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
+    Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [-141, -2314]
     Size: [112, 152]
 /twipoke:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [-152, -1091]
     Size: [101, 102]
 /twiread:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [0, -2120]
-    Size: [256, 108]
+    Size: [253, 108]
 /twisign:
   null:
     CSS: {cursor: default!important, line-height: 24px!important, overflow: hidden!important,
@@ -947,17 +943,17 @@
     Type: Custom
 /twiteehee:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [-147, -2022]
-    Size: [104, 152]
+    Size: [103, 151]
 /twiteeth:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [0, -2351]
-    Size: [141, 177]
+    Size: [141, 168]
 /twithis:
   null:
-    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [0, -202]
     Size: [210, 202]
 /txt!:
@@ -975,7 +971,7 @@
     Type: Custom
 /wuna:
   null:
-    Image: http://d.thumbs.redditmedia.com/pYjqEkXS3bpZuBB3.png
+    Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [0, -433]
     Size: [146, 202]
 /yellow!:
