--- a/emotes/mylittlefoodmanes.yaml
+++ b/emotes/mylittlefoodmanes.yaml
@@ -180,6 +180,10 @@
   null:
     Image: http://b.thumbs.redditmedia.com/lstFXQBxfYPACSlm.png
     Size: [197, 195]
+/twiststare:
+  null:
+    Image: http://b.thumbs.redditmedia.com/RXv_tv6C8eG0XSBs.png
+    Size: [70, 70]
 /udnt:
   null:
     Image: http://b.thumbs.redditmedia.com/7czNfcRFKj7Ef2tI.png
