--- a/emotes/tacoshy.yaml
+++ b/emotes/tacoshy.yaml
@@ -14,6 +14,10 @@
   null:
     Image: http://e.thumbs.redditmedia.com/OAiPVNRSf--Fgspp.png
     Size: [400, 225]
+/conkyfun:
+  null:
+    Image: http://c.thumbs.redditmedia.com/SP6XDdeuTqvkUiGh.png
+    Size: [300, 159]
 /datass:
   null:
     Image: http://f.thumbs.redditmedia.com/ItYIkaHDy4PXJRo_.png
