--- a/tags/mylittlefoodmanes.yaml
+++ b/tags/mylittlefoodmanes.yaml
@@ -39,5 +39,6 @@
 /themagicalcouch: [+berrypunch]
 /twiraptor: [+mashup, +twilightsparkle]
 /twistballs: [+foodmane, +twist]
+/twiststare: [+twist]
 /udnt: [+foodmane, +ocpony]
 /whatthefacannons: [+flitter, +foodmane]
