--- a/tags/tacoshy.yaml
+++ b/tags/tacoshy.yaml
@@ -2,6 +2,7 @@
 /bryofapproval: [+ocpony]
 /businesstaco: [+fluttershy, +foodmane]
 /butttacos: [+animote, +fluttershy, +foodmane]
+/conkyfun: [+fun, +nonpony]
 /datass: [+nonpony]
 /fillytaco: [+fluttershy, +foodmane]
 /gaptaco: [+fluttershy, +foodmane]
