Stylesheet/emote/tag updates 2012-10-27

--- a/emotes/pankakke.yaml
+++ b/emotes/pankakke.yaml
@@ -1,6 +1,6 @@
 /acer:
   null:
-    Image: http://a.thumbs.redditmedia.com/m_D9s30dWh5eTL7N.png
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
     Offset: [-1561, 0]
     Size: [196, 150]
 /apghoofpump:
@@ -17,71 +17,81 @@
     Size: [98, 150]
 /bugs:
   null:
-    Image: http://e.thumbs.redditmedia.com/nbwPOMgNB9CCaUW4.png
+    Image: http://f.thumbs.redditmedia.com/-2A0nH9Y_8UIPab_.png
     Offset: [-1011, 0]
     Size: [205, 150]
+/calcos:
+  null:
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
+    Offset: [-1870, 0]
+    Size: [116, 150]
 /coconutmonkey:
   null:
-    Image: http://e.thumbs.redditmedia.com/nbwPOMgNB9CCaUW4.png
+    Image: http://f.thumbs.redditmedia.com/-2A0nH9Y_8UIPab_.png
     Offset: [-185, 0]
     Size: [150, 150]
 /darkman:
   null:
-    Image: http://a.thumbs.redditmedia.com/m_D9s30dWh5eTL7N.png
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
     Offset: [-1757, 0]
     Size: [113, 150]
 /dinsfire:
   null:
-    Image: http://a.thumbs.redditmedia.com/m_D9s30dWh5eTL7N.png
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
     Offset: [-601, 0]
     Size: [141, 150]
 /dintrot:
   null:
-    Image: http://a.thumbs.redditmedia.com/m_D9s30dWh5eTL7N.png
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
     Offset: [-601, 0]
     Size: [141, 150]
 /doctordrunk:
   null:
-    Image: http://e.thumbs.redditmedia.com/nbwPOMgNB9CCaUW4.png
+    Image: http://f.thumbs.redditmedia.com/-2A0nH9Y_8UIPab_.png
     Offset: [-1660, 0]
     Size: [154, 150]
+/evanmacave:
+  null:
+    Image: http://f.thumbs.redditmedia.com/-2A0nH9Y_8UIPab_.png
+    Offset: [-2004, 0]
+    Size: [102, 150]
 /fearless:
   null:
     Image: http://d.thumbs.redditmedia.com/Hg1Ni66tLWTBk88-.png
     Size: [252, 300]
 /flutterhey:
   null:
-    Image: http://a.thumbs.redditmedia.com/m_D9s30dWh5eTL7N.png
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
     Offset: [-829, 0]
     Size: [150, 150]
 /gdb:
   null:
-    Image: http://a.thumbs.redditmedia.com/m_D9s30dWh5eTL7N.png
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
     Offset: [-482, 0]
     Size: [119, 150]
 /gdbsmirk:
   null:
-    Image: http://a.thumbs.redditmedia.com/m_D9s30dWh5eTL7N.png
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
     Offset: [-482, 0]
     Size: [119, 150]
 /hellocake:
   null:
-    Image: http://e.thumbs.redditmedia.com/nbwPOMgNB9CCaUW4.png
+    Image: http://f.thumbs.redditmedia.com/-2A0nH9Y_8UIPab_.png
     Offset: [-676, 0]
     Size: [101, 150]
 /mangohug:
   null:
-    Image: http://a.thumbs.redditmedia.com/m_D9s30dWh5eTL7N.png
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
     Offset: [-1324, 0]
     Size: [123, 150]
 /notthebees:
   null:
-    Image: http://e.thumbs.redditmedia.com/nbwPOMgNB9CCaUW4.png
+    Image: http://f.thumbs.redditmedia.com/-2A0nH9Y_8UIPab_.png
     Offset: [-1814, 0]
     Size: [190, 150]
 /octaviagasm:
   null:
-    Image: http://a.thumbs.redditmedia.com/m_D9s30dWh5eTL7N.png
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
     Offset: [-1165, 0]
     Size: [159, 150]
 /pabbored:
@@ -106,17 +116,17 @@
     Size: [70, 70]
 /pan10:
   null:
-    Image: http://e.thumbs.redditmedia.com/nbwPOMgNB9CCaUW4.png
+    Image: http://f.thumbs.redditmedia.com/-2A0nH9Y_8UIPab_.png
     Offset: [-335, 0]
     Size: [107, 150]
 /pancalcos:
   null:
-    Image: http://e.thumbs.redditmedia.com/nbwPOMgNB9CCaUW4.png
+    Image: http://f.thumbs.redditmedia.com/-2A0nH9Y_8UIPab_.png
     Offset: [-1383, 0]
     Size: [93, 150]
 /panwaffbattle:
   null:
-    Image: http://e.thumbs.redditmedia.com/nbwPOMgNB9CCaUW4.png
+    Image: http://f.thumbs.redditmedia.com/-2A0nH9Y_8UIPab_.png
     Offset: [-442, 0]
     Size: [234, 150]
 /pcadance:
@@ -146,7 +156,7 @@
     Size: [70, 70]
 /petra:
   null:
-    Image: http://a.thumbs.redditmedia.com/m_D9s30dWh5eTL7N.png
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
     Offset: [-1447, 0]
     Size: [114, 150]
 /pflutterjerk:
@@ -161,21 +171,21 @@
     Size: [70, 70]
 /pfreeman:
   null:
-    Image: http://e.thumbs.redditmedia.com/nbwPOMgNB9CCaUW4.png
+    Image: http://f.thumbs.redditmedia.com/-2A0nH9Y_8UIPab_.png
     Offset: [-777, 0]
     Size: [234, 150]
 /pgaben:
   null:
-    Image: http://e.thumbs.redditmedia.com/nbwPOMgNB9CCaUW4.png
+    Image: http://f.thumbs.redditmedia.com/-2A0nH9Y_8UIPab_.png
     Offset: [-1476, 0]
     Size: [184, 150]
 /pghoofpump:
   null:
-    Image: http://a.thumbs.redditmedia.com/m_D9s30dWh5eTL7N.png
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
     Size: [71, 150]
 /pglegcross:
   null:
-    Image: http://a.thumbs.redditmedia.com/m_D9s30dWh5eTL7N.png
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
     Offset: [-198, 0]
     Size: [67, 150]
 /pgrannysmith:
@@ -185,12 +195,12 @@
     Size: [70, 70]
 /pgshock:
   null:
-    Image: http://a.thumbs.redditmedia.com/m_D9s30dWh5eTL7N.png
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
     Offset: [-71, 0]
     Size: [127, 150]
 /pgshuffle:
   null:
-    Image: http://a.thumbs.redditmedia.com/m_D9s30dWh5eTL7N.png
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
     Offset: [-265, 0]
     Size: [78, 150]
 /plunateehee:
@@ -210,7 +220,7 @@
     Size: [70, 70]
 /ponykakke:
   null:
-    Image: http://a.thumbs.redditmedia.com/m_D9s30dWh5eTL7N.png
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
     Offset: [-343, 0]
     Size: [139, 150]
 /ppinkiefear:
@@ -289,24 +299,34 @@
     Size: [70, 70]
 /sistersprankton:
   null:
-    Image: http://a.thumbs.redditmedia.com/m_D9s30dWh5eTL7N.png
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
     Offset: [-742, 0]
     Size: [87, 150]
 /sisterzealot:
   null:
-    Image: http://a.thumbs.redditmedia.com/m_D9s30dWh5eTL7N.png
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
     Offset: [-979, 0]
     Size: [186, 150]
 /smothered:
   null:
-    Image: http://e.thumbs.redditmedia.com/nbwPOMgNB9CCaUW4.png
+    Image: http://f.thumbs.redditmedia.com/-2A0nH9Y_8UIPab_.png
     Size: [185, 150]
+/sprankton:
+  null:
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
+    Offset: [-742, 0]
+    Size: [87, 150]
 /torgo:
   null:
-    Image: http://e.thumbs.redditmedia.com/nbwPOMgNB9CCaUW4.png
+    Image: http://f.thumbs.redditmedia.com/-2A0nH9Y_8UIPab_.png
     Offset: [-1216, 0]
     Size: [167, 150]
 /udntsrslydntnomedood:
   null:
     Image: http://c.thumbs.redditmedia.com/0PeEOgH7WjmnMaNJ.jpg
     Size: [800, 600]
+/zealot:
+  null:
+    Image: http://e.thumbs.redditmedia.com/FAK9eWnufRmDG8Nd.png
+    Offset: [-979, 0]
+    Size: [186, 150]
