--- a/tags/mylittlefoodmanes.yaml
+++ b/tags/mylittlefoodmanes.yaml
@@ -1,5 +1,6 @@
 /applesaurus: [+applejack, +mashup]
 /ave: [+nonpony]
+/bro: [+nonpony]
 /bryvood: [+ocpony]
 /buttershy: [+fluttershy, +foodmane]
 /choctavia: [+foodmane, +octavia]
