--- a/tags/pankakke.yaml
+++ b/tags/pankakke.yaml
@@ -3,11 +3,13 @@
 /apglegcross: [+animote, +ocpony]
 /apgshuffle: [+animote, +ocpony]
 /bugs: [+nonpony]
+/calcos: [+ocpony]
 /coconutmonkey: [+nonpony]
 /darkman: [+ocpony]
 /dinsfire: [+ocpony]
 /dintrot: [+v]
 /doctordrunk: [+doctorwho, +nonpony]
+/evanmacave: [+nonpony]
 /fearless: [+discord]
 /flutterhey: [+fluttershy]
 /gdb: [+ocpony]
@@ -60,5 +62,7 @@
 /sistersprankton: [+nonpony]
 /sisterzealot: [+bigmac]
 /smothered: [+nonpony]
+/sprankton: [+v]
 /torgo: [+nonpony]
 /udntsrslydntnomedood: [+nonpony]
+/zealot: [+v]
