--- a/emotes/mylittlefoodmanes.yaml
+++ b/emotes/mylittlefoodmanes.yaml
@@ -6,6 +6,10 @@
   null:
     Image: http://b.thumbs.redditmedia.com/a80kLq4jqKonTSu1.jpg
     Size: [941, 509]
+/bro:
+  null:
+    Image: http://d.thumbs.redditmedia.com/0OeAryQOZ4NXX21E.png
+    Size: [200, 255]
 /bryvood:
   null:
     Image: http://b.thumbs.redditmedia.com/30CNhAjLQPOG5hmC.png
