Stylesheet/emote/tag updates 2012-10-28

--- a/emotes/falloutequestria.yaml
+++ b/emotes/falloutequestria.yaml
@@ -5,7 +5,7 @@
       position: relative!important, text-align: center!important, text-shadow: '2px
         2px 2px black,-2px -2px 2px black,-2px 2px 2px black,2px -2px 2px black!important',
       text-transform: uppercase!important}
-    Image: http://a.thumbs.redditmedia.com/CkoH3om9i2hwm8pH.png
+    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
     Offset: [0, -950]
     Size: [300, 300]
   em:
@@ -25,7 +25,7 @@
     Size: [70, 70]
 /bjboom:
   null:
-    Image: http://a.thumbs.redditmedia.com/CkoH3om9i2hwm8pH.png
+    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
     Offset: [0, -230]
     Size: [70, 70]
 /bjbubbles:
@@ -54,7 +54,7 @@
     Size: [70, 70]
 /bjsurprise:
   null:
-    Image: http://a.thumbs.redditmedia.com/CkoH3om9i2hwm8pH.png
+    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
     Offset: [0, -870]
     Size: [119, 76]
 /calamity:
@@ -64,7 +64,7 @@
     Size: [100, 100]
 /calamitywtf:
   null:
-    Image: http://a.thumbs.redditmedia.com/CkoH3om9i2hwm8pH.png
+    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
     Offset: [0, -535]
     Size: [78, 101]
 /charity:
@@ -74,7 +74,7 @@
     Size: [70, 70]
 /drrampage:
   null:
-    Image: http://a.thumbs.redditmedia.com/CkoH3om9i2hwm8pH.png
+    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
     Offset: [0, -305]
     Size: [70, 70]
 /fightcalamity:
@@ -113,7 +113,7 @@
     Size: [103, 150]
 /harmony:
   null:
-    Image: http://a.thumbs.redditmedia.com/CkoH3om9i2hwm8pH.png
+    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
     Offset: [0, -640]
     Size: [200, 225]
 /homage:
@@ -146,6 +146,11 @@
     Image: http://c.thumbs.redditmedia.com/cRA-YgdTGmGXvxjn.png
     Offset: [0, -1610]
     Size: [70, 70]
+/lpfilly:
+  null:
+    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
+    Offset: [0, -1255]
+    Size: [125, 150]
 /lpfrown:
   null:
     Image: http://c.thumbs.redditmedia.com/cRA-YgdTGmGXvxjn.png
@@ -163,12 +168,12 @@
     Size: [70, 70]
 /lpinspire:
   null:
-    Image: http://a.thumbs.redditmedia.com/CkoH3om9i2hwm8pH.png
+    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
     Offset: [0, -380]
     Size: [88, 150]
 /lpnotsure:
   null:
-    Image: http://a.thumbs.redditmedia.com/CkoH3om9i2hwm8pH.png
+    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
     Size: [150, 150]
 /lpnotwant:
   null:
@@ -230,7 +235,7 @@
     Size: [70, 70]
 /p21fh:
   null:
-    Image: http://a.thumbs.redditmedia.com/CkoH3om9i2hwm8pH.png
+    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
     Offset: [0, -155]
     Size: [70, 70]
 /p21fun:
