--- a/emotes/mylittlefoodmanes.yaml
+++ b/emotes/mylittlefoodmanes.yaml
@@ -1,7 +1,7 @@
 /applesaurus:
   null:
-    Image: http://e.thumbs.redditmedia.com/qBRj6g3QbeFBbmDR.png
-    Size: [191, 220]
+    Image: http://f.thumbs.redditmedia.com/rcTeUaf89af1ohIM.png
+    Size: [174, 200]
 /ave:
   null:
     Image: http://b.thumbs.redditmedia.com/a80kLq4jqKonTSu1.jpg
@@ -59,8 +59,8 @@
     Size: [214, 152]
 /fillytacoshy:
   null:
-    Image: http://e.thumbs.redditmedia.com/p0uzGEf6fzhcdG14.png
-    Size: [355, 280]
+    Image: http://a.thumbs.redditmedia.com/xmjlMsumXwK9JfQr.png
+    Size: [200, 158]
 /floutstalin:
   null:
     Image: http://d.thumbs.redditmedia.com/j3-7vGWLC4B5osqW.png
@@ -114,12 +114,12 @@
     Size: [252, 194]
 /macinmane:
   null:
-    Image: http://a.thumbs.redditmedia.com/LQaz8qYj6Ccw8N-T.png
-    Size: [314, 300]
+    Image: http://d.thumbs.redditmedia.com/kUPB-jg_h1tscOOQ.png
+    Size: [150, 143]
 /mechahitler:
   null:
-    Image: http://c.thumbs.redditmedia.com/aVNiKYYlACrsfTEz.png
-    Size: [353, 450]
+    Image: http://d.thumbs.redditmedia.com/i8gTu0Q-cVKJr-4Q.png
+    Size: [236, 300]
 /pepperminttwist:
   null:
     Image: http://e.thumbs.redditmedia.com/xD-b64Q1xh4szrBX.png
