--- a/tags/falloutequestria.yaml
+++ b/tags/falloutequestria.yaml
@@ -25,6 +25,7 @@
 /lparmed: [+foe, +ocpony]
 /lpblush: [+foe, +ocpony]
 /lpcrying: [+foe, +ocpony]
+/lpfilly: [+filly, +foe, +ocpony]
 /lpfrown: [+foe, +ocpony]
 /lphappy: [+foe, +ocpony]
 /lphurt: [+foe, +ocpony]
