Stylesheet/emote/tag updates 2012-10-28

--- a/emotes/falloutequestria.yaml
+++ b/emotes/falloutequestria.yaml
@@ -5,7 +5,7 @@
       position: relative!important, text-align: center!important, text-shadow: '2px
         2px 2px black,-2px -2px 2px black,-2px 2px 2px black,2px -2px 2px black!important',
       text-transform: uppercase!important}
-    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
+    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
     Offset: [0, -950]
     Size: [300, 300]
   em:
@@ -25,7 +25,7 @@
     Size: [70, 70]
 /bjboom:
   null:
-    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
+    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
     Offset: [0, -230]
     Size: [70, 70]
 /bjbubbles:
@@ -54,7 +54,7 @@
     Size: [70, 70]
 /bjsurprise:
   null:
-    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
+    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
     Offset: [0, -870]
     Size: [119, 76]
 /calamity:
@@ -64,7 +64,7 @@
     Size: [100, 100]
 /calamitywtf:
   null:
-    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
+    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
     Offset: [0, -535]
     Size: [78, 101]
 /charity:
@@ -72,9 +72,14 @@
     Image: http://d.thumbs.redditmedia.com/RcQxtSagCYQyGGk9.png
     Offset: [0, -140]
     Size: [70, 70]
+/cyberboop:
+  null:
+    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
+    Offset: [0, -1410]
+    Size: [200, 94]
 /drrampage:
   null:
-    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
+    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
     Offset: [0, -305]
     Size: [70, 70]
 /fightcalamity:
@@ -113,7 +118,7 @@
     Size: [103, 150]
 /harmony:
   null:
-    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
+    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
     Offset: [0, -640]
     Size: [200, 225]
 /homage:
@@ -148,7 +153,7 @@
     Size: [70, 70]
 /lpfilly:
   null:
-    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
+    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
     Offset: [0, -1255]
     Size: [125, 150]
 /lpfrown:
@@ -168,12 +173,12 @@
     Size: [70, 70]
 /lpinspire:
   null:
-    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
+    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
     Offset: [0, -380]
     Size: [88, 150]
 /lpnotsure:
   null:
-    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
+    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
     Size: [150, 150]
 /lpnotwant:
   null:
@@ -235,7 +240,7 @@
     Size: [70, 70]
 /p21fh:
   null:
-    Image: http://f.thumbs.redditmedia.com/iayNAM5czyA4YxSe.png
+    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
     Offset: [0, -155]
     Size: [70, 70]
 /p21fun:
