--- a/tags/falloutequestria.yaml
+++ b/tags/falloutequestria.yaml
@@ -10,6 +10,7 @@
 /calamity: [+foe, +ocpony]
 /calamitywtf: [+foe, +ocpony]
 /charity: [+foe, +ocpony]
+/cyberboop: [+foe, +ocpony]
 /drrampage: [+foe, +ocpony]
 /fightcalamity: [+foe, +ocpony]
 /foe21: [+broken]
