Stylesheet/emote/tag updates 2012-10-30

--- a/emotes/mlas1animotes.yaml
+++ b/emotes/mlas1animotes.yaml
@@ -182,6 +182,10 @@
     CSS: {margin-left: 3px, margin-right: 3px}
     Image: http://d.thumbs.redditmedia.com/8TcXcx901sYChQSu.png
     Size: [164, 150]
+/derpystomp:
+  null:
+    Image: http://a.thumbs.redditmedia.com/6gyjOFf0p9OW69pT.png
+    Size: [105, 128]
 /floatyesplin:
   null:
     CSS: {margin-left: 3px, margin-right: 3px}
