--- a/tags/falloutequestria.yaml
+++ b/tags/falloutequestria.yaml
@@ -7,10 +7,10 @@
 /bjshooty: [+foe, +ocpony]
 /bjstare: [+foe, +ocpony]
 /bjsurprise: [+foe, +ocpony]
+/bjwhiskey: [+foe, +ocpony]
 /calamity: [+foe, +ocpony]
 /calamitywtf: [+foe, +ocpony]
 /charity: [+foe, +ocpony]
-/cyberboop: [+foe, +ocpony]
 /drrampage: [+foe, +ocpony]
 /fightcalamity: [+foe, +ocpony]
 /foe21: [+broken]
@@ -35,6 +35,7 @@
 /lpnotwant: [+foe, +ocpony]
 /lpsad: [+foe, +ocpony]
 /lpshrug: [+foe, +ocpony, +shrug]
+/lpsign: [+foe, +imagemacro, +ocpony]
 /lpsurprise: [+foe, +ocpony]
 /lptable: [+foe, +ocpony, +tableflip]
 /lpwet: [+foe, +ocpony]
@@ -49,8 +50,8 @@
 /p21notamused: [+foe, +ocpony]
 /pinkeyes: [+foe, +ocpony]
 /protege: [+foe, +ocpony]
-/psychoshy: [+foe, +ocpony]
-/qnwhsk: [+v]
+/psychoshy: [+foe, +hovermote, +ocpony]
+/qnwhsk: [+foe, +ocpony]
 /queenwhiskey: [+foe, +ocpony]
 /rampage: [+foe, +ocpony]
 /s: [+formatting]
