--- a/emotes/falloutequestria.yaml
+++ b/emotes/falloutequestria.yaml
@@ -5,7 +5,7 @@
       position: relative!important, text-align: center!important, text-shadow: '2px
         2px 2px black,-2px -2px 2px black,-2px 2px 2px black,2px -2px 2px black!important',
       text-transform: uppercase!important}
-    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
+    Image: http://d.thumbs.redditmedia.com/cs3Vvbcx85WGyWei.png
     Offset: [0, -950]
     Size: [300, 300]
   em:
@@ -25,7 +25,7 @@
     Size: [70, 70]
 /bjboom:
   null:
-    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
+    Image: http://d.thumbs.redditmedia.com/cs3Vvbcx85WGyWei.png
     Offset: [0, -230]
     Size: [70, 70]
 /bjbubbles:
@@ -54,9 +54,14 @@
     Size: [70, 70]
 /bjsurprise:
   null:
-    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
+    Image: http://d.thumbs.redditmedia.com/cs3Vvbcx85WGyWei.png
     Offset: [0, -870]
     Size: [119, 76]
+/bjwhiskey:
+  null:
+    Image: http://d.thumbs.redditmedia.com/cs3Vvbcx85WGyWei.png
+    Offset: [0, -1905]
+    Size: [96, 149]
 /calamity:
   null:
     Image: http://d.thumbs.redditmedia.com/RcQxtSagCYQyGGk9.png
@@ -64,7 +69,7 @@
     Size: [100, 100]
 /calamitywtf:
   null:
-    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
+    Image: http://d.thumbs.redditmedia.com/cs3Vvbcx85WGyWei.png
     Offset: [0, -535]
     Size: [78, 101]
 /charity:
@@ -72,14 +77,9 @@
     Image: http://d.thumbs.redditmedia.com/RcQxtSagCYQyGGk9.png
     Offset: [0, -140]
     Size: [70, 70]
-/cyberboop:
-  null:
-    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
-    Offset: [0, -1410]
-    Size: [200, 94]
 /drrampage:
   null:
-    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
+    Image: http://d.thumbs.redditmedia.com/cs3Vvbcx85WGyWei.png
     Offset: [0, -305]
     Size: [70, 70]
 /fightcalamity:
@@ -118,7 +118,7 @@
     Size: [103, 150]
 /harmony:
   null:
-    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
+    Image: http://d.thumbs.redditmedia.com/cs3Vvbcx85WGyWei.png
     Offset: [0, -640]
     Size: [200, 225]
 /homage:
@@ -153,7 +153,7 @@
     Size: [70, 70]
 /lpfilly:
   null:
-    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
+    Image: http://d.thumbs.redditmedia.com/cs3Vvbcx85WGyWei.png
     Offset: [0, -1255]
     Size: [125, 150]
 /lpfrown:
@@ -173,12 +173,12 @@
     Size: [70, 70]
 /lpinspire:
   null:
-    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
+    Image: http://d.thumbs.redditmedia.com/cs3Vvbcx85WGyWei.png
     Offset: [0, -380]
     Size: [88, 150]
 /lpnotsure:
   null:
-    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
+    Image: http://d.thumbs.redditmedia.com/cs3Vvbcx85WGyWei.png
     Size: [150, 150]
 /lpnotwant:
   null:
@@ -195,6 +195,20 @@
     Image: http://c.thumbs.redditmedia.com/cRA-YgdTGmGXvxjn.png
     Offset: [0, -824]
     Size: [70, 70]
+/lpsign:
+  null:
+    CSS: {cursor: default!important, line-height: 24px!important, overflow: hidden!important,
+      position: relative!important}
+    Image: http://d.thumbs.redditmedia.com/cs3Vvbcx85WGyWei.png
+    Offset: [0, -1600]
+    Size: [262, 300]
+  em:
+    CSS: {color: '#465A73!important', font-family: '"Comic Sans"!important', font-size: 15px!important,
+      font-style: normal!important, left: 95%!important, margin-left: -100px!important,
+      position: absolute!important, text-align: center!important, text-shadow: '-1px
+        0 #394D66,0 1px black,1px 0 #394D66,0 -1px #394D66!important', text-transform: uppercase!important,
+      top: 50px!important, width: 93px!important}
+    Type: Custom
 /lpsurprise:
   null:
     Image: http://c.thumbs.redditmedia.com/cRA-YgdTGmGXvxjn.png
@@ -240,7 +254,7 @@
     Size: [70, 70]
 /p21fh:
   null:
-    Image: http://c.thumbs.redditmedia.com/KNXxwsix6uzS1K3V.png
+    Image: http://d.thumbs.redditmedia.com/cs3Vvbcx85WGyWei.png
     Offset: [0, -155]
     Size: [70, 70]
 /p21fun:
@@ -273,9 +287,9 @@
     Type: Custom
 /qnwhsk:
   null:
-    Image: http://d.thumbs.redditmedia.com/RcQxtSagCYQyGGk9.png
-    Offset: [-70, -70]
-    Size: [69, 70]
+    Image: http://d.thumbs.redditmedia.com/cs3Vvbcx85WGyWei.png
+    Offset: [0, -1510]
+    Size: [70, 85]
 /queenwhiskey:
   null:
     Image: http://d.thumbs.redditmedia.com/RcQxtSagCYQyGGk9.png
